--- a/otherapps.json
+++ b/otherapps.json
@@ -1,4 +1,5 @@
 {"apps":[
+  {"СтихТок":"https://appgallery.huawei.com/app/C110284381?shareFrom=appmarket"},
   {"Pop it":"https://appgallery.huawei.com/app/C110200471?shareFrom=appmarket"},
   {"Tentrix":"https://appgallery.huawei.com/app/C109635295?shareFrom=appmarket"},
   {"AI Emoji":"https://appgallery.huawei.com/app/C109409629?shareFrom=appmarket"},
