--- a/otherapps.json
+++ b/otherapps.json
@@ -1,27 +1,1 @@
-{"apps":[
-  {"PokePack":"https://appgallery.huawei.com/app/C110604033?shareFrom=appmarket"},
-  {"Блокнот":"https://appgallery.huawei.com/app/C110410549?shareFrom=appmarket"},
-  {"СтихТок":"https://appgallery.huawei.com/app/C110284381?shareFrom=appmarket"},
-  {"Pop it":"https://appgallery.huawei.com/app/C110200471?shareFrom=appmarket"},
-  {"Tentrix":"https://appgallery.huawei.com/app/C109635295?shareFrom=appmarket"},
-  {"AI Emoji":"https://appgallery.huawei.com/app/C109409629?shareFrom=appmarket"},
-  {"Сумма чисел":"https://appgallery.huawei.com/app/C109187673?shareFrom=appmarket"},
-  {"Разрушитель блоков":"https://appgallery.huawei.com/app/C109182415?shareFrom=appmarket"},
-  {"Пятнашки":"https://appgallery.cloud.huawei.com/app/C109153117?shareFrom=appmarket"},
-  {"Очистить Динамик":"https://appgallery.huawei.com/app/C109038501?shareFrom=appmarket"},
-  {"QR Генератор":"https://appgallery.huawei.com/app/C108999521?shareFrom=appmarket"},
-  {"AI Художник":"https://appgallery.huawei.com/app/C108879453?shareFrom=appmarket"},
-  {"AI Picture Maker":"https://appgallery.huawei.com/app/C108798513?shareFrom=appmarket"},
-  {"Шар судьбы":"https://appgallery.huawei.com/app/C107003529?shareFrom=appmarket"},
-  {"Radio Metal":"https://appgallery.huawei.com/app/C107015903?shareFrom=appmarket"},
-  {"РАдио Вечность":"https://appgallery.huawei.com/app/C107063731?shareFrom=appmarket"},
-  {"RADIOEX":"https://appgallery.huawei.com/app/C107090013?shareFrom=appmarket"},
-  {"Радио Вечерний Бриз":"https://appgallery.huawei.com/app/C107122867?shareFrom=appmarket"},
-  {"Барабаны":"https://appgallery.huawei.com/app/C107162765?shareFrom=appmarket"},
-  {"DTMF Генератор":"https://appgallery.huawei.com/app/C107207987?shareFrom=appmarket"},
-  {"Hang Drum Simulator":"https://appgallery.huawei.com/app/C107222529?shareFrom=appmarket"},
-  {"Фазы Луны":"https://appgallery.huawei.com/app/C107942667?shareFrom=appmarket"},
-  {"Переводчик наоборот":"https://appgallery.huawei.com/app/C108002369?shareFrom=appmarket"},
-  {"Число прописью":"https://appgallery.huawei.com/app/C108060869?shareFrom=appmarket"},
-  {"Точный гороскоп":"https://appgallery.huawei.com/app/C108186815?shareFrom=appmarket"}]
-}
+{"apps":[{"PokePack":"https://appgallery.huawei.com/app/C110604033?shareFrom=appmarket"},{"Блокнот":"https://appgallery.huawei.com/app/C110410549?shareFrom=appmarket"},{"СтихТок":"https://appgallery.huawei.com/app/C110284381?shareFrom=appmarket"},{"Pop it":"https://appgallery.huawei.com/app/C110200471?shareFrom=appmarket"},{"Tentrix":"https://appgallery.huawei.com/app/C109635295?shareFrom=appmarket"},{"AI Emoji":"https://appgallery.huawei.com/app/C109409629?shareFrom=appmarket"},{"Сумма чисел":"https://appgallery.huawei.com/app/C109187673?shareFrom=appmarket"},{"Разрушитель блоков":"https://appgallery.huawei.com/app/C109182415?shareFrom=appmarket"},{"Пятнашки":"https://appgallery.cloud.huawei.com/app/C109153117?shareFrom=appmarket"},{"Очистить Динамик":"https://appgallery.huawei.com/app/C109038501?shareFrom=appmarket"},{"QR Генератор":"https://appgallery.huawei.com/app/C108999521?shareFrom=appmarket"},{"AI Художник":"https://appgallery.huawei.com/app/C108879453?shareFrom=appmarket"},{"AI Picture Maker":"https://appgallery.huawei.com/app/C108798513?shareFrom=appmarket"},{"Шар судьбы":"https://appgallery.huawei.com/app/C107003529?shareFrom=appmarket"},{"Radio Metal":"https://appgallery.huawei.com/app/C107015903?shareFrom=appmarket"},{"РАдио Вечность":"https://appgallery.huawei.com/app/C107063731?shareFrom=appmarket"},{"RADIOEX":"https://appgallery.huawei.com/app/C107090013?shareFrom=appmarket"},{"Радио Вечерний Бриз":"https://appgallery.huawei.com/app/C107122867?shareFrom=appmarket"},{"Барабаны":"https://appgallery.huawei.com/app/C107162765?shareFrom=appmarket"},{"DTMF Генератор":"https://appgallery.huawei.com/app/C107207987?shareFrom=appmarket"},{"Hang Drum Simulator":"https://appgallery.huawei.com/app/C107222529?shareFrom=appmarket"},{"Фазы Луны":"https://appgallery.huawei.com/app/C107942667?shareFrom=appmarket"},{"Переводчик наоборот":"https://appgallery.huawei.com/app/C108002369?shareFrom=appmarket"},{"Число прописью":"https://appgallery.huawei.com/app/C108060869?shareFrom=appmarket"},{"Точный гороскоп":"https://appgallery.huawei.com/app/C108186815?shareFrom=appmarket"}]}
